Update build.yml (#12)
* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update entrypoint.sh

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update entrypoint.sh

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

---------

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
   buildAUR:
     strategy:
       matrix:
-        repos: [adduser-deb, alist, carapace, davmail, doggo, fselect, rustic, powershell-bin]
+        repos: [adduser-deb, alist, carapace, davmail, doggo, fselect, rustic, powershell-bin, visual-studio-code-insiders-bin]
 
       fail-fast: false
       
