Update build.yml (#20)
* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Delete kcm-polkit-kde-git directory

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

---------

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
   buildAUR:
     strategy:
       matrix:
-        repos: [adduser-deb, alist, carapace, clash-verge-rev-bin, davmail, dracut-git, doggo, fselect, networkd-broker, networkd-notify-git, rustic-rs]
+        repos: [adduser-deb, alist, carapace, clash-verge-rev-bin, davmail, dracut-git, doggo, fselect, networkd-broker, networkd-notify-git, pacman-hook-kernel-install, rustic-rs]
 
       fail-fast: false
       
@@ -39,7 +39,7 @@ jobs:
   buildNonAUR:
     strategy:
       matrix:
-        PKGBUILDs: [ion-git, kcm-polkit-kde-git, veracrypt-inyourlanguage]
+        PKGBUILDs: [ion-git, veracrypt-inyourlanguage]
 
       fail-fast: false
       
