--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
   buildAUR:
     strategy:
       matrix:
-        repos: [adduser-deb, alist, carapace, clash-verge-rev-bin, davmail, doggo, dracut-git, dracut-numlock, fselect,  mpris-proxy-service, networkd-broker, networkd-notify-git, paccache-hook, pacman-hook-kernel-install, playerctld-systemd-unit, rustic-rs, vrms-arch-git]
+        repos: [adduser-deb, alist, carapace, clash-verge-rev-bin, davmail, doggo, dracut-git, dracut-numlock, fselect, memstrack, mpris-proxy-service, networkd-broker, networkd-notify-git, paccache-hook, pacman-hook-kernel-install, playerctld-systemd-unit, rustic-rs, swt, vrms-arch-git]
 
       fail-fast: false
       
