Update build.yml (#27)
* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

---------

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
   buildAUR:
     strategy:
       matrix:
-        repos: [adduser-deb, alist, carapace, clash-verge-rev-bin, davmail, doggo, dracut-git, dracut-numlock, fselect, memstrack, mpris-proxy-service, networkd-broker, networkd-notify-git, paccache-hook, pacman-hook-kernel-install, playerctld-systemd-unit, rustic-rs, swt, vrms-arch-git]
+        repos: [adduser-deb, alist, carapace, clash-verge-rev-bin, davmail, doggo, dracut-git, dracut-numlock, fcitx5-pinyin-cedict, fcitx5-pinyin-custom-pinyin-dictionary, fcitx5-pinyin-chinese-idiom, fcitx5-pinyin-sougou, fselect, memstrack, mpris-proxy-service, networkd-broker, networkd-notify-git, paccache-hook, pacman-hook-kernel-install, playerctld-systemd-unit, rustic-rs, swt, vrms-arch-git]
 
       fail-fast: false
       
