--- a/uutils-findutils/PKGBUILD
+++ b/uutils-findutils/PKGBUILD
@@ -13,22 +13,22 @@ source=("$pkgname-$pkgver.tar.gz::$url/archive/$pkgver.tar.gz")
 sha512sums=('4bef3db72985158dd89ff7bd4022e264dff840981d72671b1deafad606b9cbe98d55860c1561c2833475f8021d47fddaac1913bd3c6e93bec76754b935629c7b')
 
 prepare() {
-  cd $_pkgname-$pkgver
+  cd "$pkgname-$pkgver"
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
-  cd $_pkgname-$pkgver
+  cd "$pkgname-$pkgver"
   cargo build --frozen --release --all-features
 }
 
 check() {
-    cd $_pkgname-$pkgver
-    cargo test --frozen --all-features
+  cd "$pkgname-$pkgver"
+  cargo test --frozen --all-features
 }
 
 package() {
-  cd $_pkgname-$pkgver
-  find target/release -maxdepth 1 -executable -type f -exec install -Dm 755 -t "$pkgdir/usr/bin/" {} +
-  install -Dm 644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname"
+  cd "$pkgname-$pkgver"
+  install -Dm755 target/release/{find,xargs} -t "$pkgdir/usr/bin/"
+  install -Dm644 LICENSE "$pkgdir/usr/share/licenses/$pkgname"
 }
