--- a/ion-git/PKGBUILD
+++ b/ion-git/PKGBUILD
@@ -27,12 +27,12 @@ prepare() {
 
 build() {
   cd "$_pkgname"
-  cargo build --frozen --release --all-features
+  cargo build --frozen --release
 }
 
 check() {
   cd "$_pkgname"
-  cargo test --frozen --all-features
+  cargo test --frozen
 }
 
 package() {
