--- a/ion-git/PKGBUILD
+++ b/ion-git/PKGBUILD
@@ -22,7 +22,7 @@ pkgver() {
 
 prepare() {
   cd "$_pkgname"
-  cargo fetch --workspace --locked --target "$(rustc -vV | sed -n 's/host: //p')"
+  cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
@@ -33,7 +33,7 @@ build() {
 
 check() {
   cd "$_pkgname"
-  cargo test --workspace --frozen
+  cargo test --workspace
 }
 
 package() {
