--- a/ion-git/PKGBUILD
+++ b/ion-git/PKGBUILD
@@ -38,8 +38,8 @@ check() {
 
 package() {
   cd "$_pkgname"
-  mkdir -p "$pkgdir"/usr/{bin,share/doc/$_pkgname}
+  mkdir -p "$pkgdir/usr/share/doc/$_pkgname"
   DESTDIR="$pkgdir/usr/bin" bash/install.sh
   cp -r manual "$pkgdir/usr/share/doc/$_pkgname"
-  install -Dm644 LICENSE -t "$pkgdir/usr/share/licenses/$_pkgname"
+  install -Dm644 LICENSE "$pkgdir/usr/share/licenses/$_pkgname"
 }
