--- a/ion-git/PKGBUILD
+++ b/ion-git/PKGBUILD
@@ -40,12 +40,8 @@ package() {
     cd "${_pkgname}"
     install -Dm 755 "target/release/${_pkgname}" -t "${pkgdir}/usr/bin"
     install -Dm 644 LICENSE -t "${pkgdir}/usr/share/licenses/${_pkgname}"
-    install -dm 755 "$pkgdir/usr/share/doc/$_pkgname"
-    find manual/builtins \
-         -maxdepth 1 \
-         -name '*.1' \
-         -type f \
-         -execdir install -Dm 644 -t "${pkgdir}/usr/share/${_pkgname}/man/man1" "{}" +
-    cp -r manual "$pkgdir/usr/share/doc/$_pkgname"
+    install -dm 755 "${pkgdir}/usr/share/doc/${_pkgname}"
+    find 'manual/builtins' -maxdepth 1 -name '*.1' -type f -execdir install -Dm 644 -t "${pkgdir}/usr/share/${_pkgname}/man/man1" "{}" +
+    cp -r manual "${pkgdir}/usr/share/doc/${_pkgname}"
     rm -r "${pkgdir}/usr/share/doc/${_pkgname}/manual/builtins"
 }
