--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,9 @@ jobs:
           - fselect
           - kernel-install-for-dracut
           - kopia
+          - linux-zen-versioned-bin
+          - linux-zen-versioned-docs-bin
+          - linux-zen-versioned-headers-bin
           - mpris-proxy-service
           - networkd-broker
           - networkd-notify-git
