--- a/kopia-ui/PKGBUILD
+++ b/kopia-ui/PKGBUILD
@@ -2,6 +2,7 @@
 # Contributor: Jens Jäschke <arch [at] jensjaeschke [dot] de>
 
 pkgname='kopia-ui'
+_pkgname='kopia'
 pkgdesc='A cross-platform backup-tool with encryption, deduplication, compression and cloud support.'
 pkgver='0.15.0'
 pkgrel='1'
@@ -24,7 +25,7 @@ sha256sums=(
 )
 
 build() {
-    cd "${pkgname}-${pkgver}"
+    cd "${_pkgname}-${pkgver}"
     export CGO_CPPFLAGS="${CPPFLAGS}"
     export CGO_CFLAGS="${CFLAGS}"
     export CGO_CXXFLAGS="${CXXFLAGS}"
@@ -36,12 +37,12 @@ build() {
 }
 
 check() {
-    cd "${pkgname}-${pkgver}"
+    cd "${_pkgname}-${pkgver}"
     make test
 }
 
 package() {
-    cd "${pkgname}-${pkgver}"
+    cd "${_pkgname}-${pkgver}"
     install -Dm 644 dist/kopia-ui/linux-unpacked "${pkgdir}/usr/lib/${pkgname}"
     install -Dm 755 '../kopia-ui' -t "${pkgdir}/usr/bin"
 }
