add package kopia-ui (#41)
* add package kopia-ui

* fix build wrong

* fix build error

* test

* fix build error

* fix build error

* fix build error

* fix build error

* revert commit

* Update Dockerfile

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Create gitconfig

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update Dockerfile

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* fix build error

* fix build error

* Update PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* test

* fix build error

* test

* fix build error

* fix build error

* fix build error

* fix build error

* fix build error

* fix build error

* fix build error

* fix build error

* imporve package

* fix build error

* fix package qusetion

* improve package

---------

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
           - fselect
           - kernel-install-for-dracut
           - kopia
+          - kopia-ui-bin
           - linux-zen-versioned-bin
           - mpris-proxy-service
           - networkd-broker
