--- a/build-nonaur-action/Dockerfile
+++ b/build-nonaur-action/Dockerfile
@@ -6,6 +6,7 @@ RUN pacman-key --init
 RUN pacman -Syu --noconfirm
 RUN pacman -S base-devel git python --noconfirm
 
+COPY gitconfig /etc/gitconfig
 COPY entrypoint.sh /entrypoint.sh
 
 USER root
