--- a/java-openjfx/PKGBUILD
+++ b/java-openjfx/PKGBUILD
@@ -10,7 +10,7 @@
 # Contributor: Olli <olli at coderkun dot de>
 
 pkgbase='java-openjfx'
-pkgname=('java-openjfx' 'java-openjfx-doc' 'java-openjfx-src')
+pkgname=("${pkgbase}" "${pkgbase}-doc" "${pkgbase}-src")
 pkgver='21.0.1.u6'
 pkgrel='1'
 pkgdesc='Java OpenJFX client application platform (open-source implementation of JavaFX) - latest version'
@@ -46,8 +46,8 @@ makedepends=(
 source=(
     "${pkgname}-${pkgver//.u/+}.tar.gz::https://github.com/openjdk/jfx${pkgver%%.*}u/archive/refs/tags/${pkgver//.u/+}.tar.gz"
     'gradle.properties'
-    'java-openjfx-flags.patch'
-    'java-openjfx-no-xlocale.patch'
+    "${pkgname}-flags.patch"
+    "${pkgname}-no-xlocale.patch"
 )
 b2sums=(
     '70d231f1277393798a4478c34bb6d876459c1316b101d67ec9d2ee62e4131049367217d5a4ee8387d759e35154830f503f7e228ad2d2ea4c479eac4a261257e3'
@@ -60,8 +60,8 @@ _jfxdir="jfx${pkgver%%.*}u-${pkgver//.u/-}"
 prepare() {
     cd "${_jfxdir}"
     ln -sf '../gradle.properties' '.'
-    patch -Np1 -i '../java-openjfx-flags.patch'
-    patch -Np1 -i '../java-openjfx-no-xlocale.patch'
+    patch -Np1 -i "../${pkgname}-flags.patch"
+    patch -Np1 -i "../${pkgname}-no-xlocale.patch"
     sed 's|, "-Werror"||g' -i 'buildSrc/linux.gradle'
 }
 
@@ -77,22 +77,22 @@ build() {
 package_java-openjfx() {
     depends=("java-runtime-openjdk=${pkgver%%.*}" 'libgl' 'libx11' 'libxtst')
     optdepends=('ffmpeg4.4: Media support', 'gtk2: GTK2 support', 'gtk3: GTK3 support', 'webkit2gtk: Web support')
-    provides=("java-openjfx=${pkgver%%.*}")
+    provides=("${pkgname}=${pkgver%%.*}")
 
     cd "${_jfxdir}"
     install -dm 755 "${pkgdir}/usr/lib/jvm/java-${pkgver%%.*}-openjdk"
     install -dm 755 "${pkgdir}/usr/share/licenses"
     cp -dr --no-preserve=ownership 'build/sdk/lib' "${pkgdir}/usr/lib/jvm/java-${pkgver%%.*}-openjdk"
     cp -dr --no-preserve=ownership 'build/jmods' "${pkgdir}/usr/lib/jvm/java-${pkgver%%.*}-openjdk"
-    cp -dr --no-preserve=ownership 'build/sdk/legal' "${pkgdir}/usr/share/licenses/java-openjfx"
+    cp -dr --no-preserve=ownership 'build/sdk/legal' "${pkgdir}/usr/share/licenses/${pkgname}"
 }
 
 package_java-openjfx-doc() {
     cd "${_jfxdir}"
     install -dm 755 "${pkgdir}/usr/share/doc"
     install -dm 755 "${pkgdir}/usr/share/licenses"
-    cp -dr --no-preserve=ownership 'build/javadoc' "${pkgdir}/usr/share/doc/java-openjfx"
-    cp -dr --no-preserve=ownership 'build/sdk/legal' "${pkgdir}/usr/share/licenses/java-openjfx-doc"
+    cp -dr --no-preserve=ownership 'build/javadoc' "${pkgdir}/usr/share/doc/${pkgbase}"
+    cp -dr --no-preserve=ownership 'build/sdk/legal' "${pkgdir}/usr/share/licenses/${pkgname}"
 }
 
 package_java-openjfx-src() {
@@ -100,5 +100,5 @@ package_java-openjfx-src() {
     install -dm 755 "${pkgdir}/usr/lib/jvm/java-${pkgver%%.*}-openjdk"
     install -dm 755 "${pkgdir}/usr/share/licenses"
     install -m 644 'build/sdk/src.zip' "${pkgdir}/usr/lib/jvm/java-${pkgver%%.*}-openjdk/javafx-src.zip"
-    cp -dr --no-preserve=ownership 'build/sdk/legal' "${pkgdir}/usr/share/licenses/java-openjfx-src"
+    cp -dr --no-preserve=ownership 'build/sdk/legal' "${pkgdir}/usr/share/licenses/${pkgname}"
 }
