add package clash-verge

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
           - adduser-deb
           - alist
           - carapace
+          - clash-verge
           - davmail
           - doggo
           - dracut-git
