--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
           - alist
           - carapace
           - clash-verge
+          - clash-verge-bin
           - davmail
           - doggo
           - dracut-git
