fix build error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,6 +71,7 @@ jobs:
         PKGBUILDs:
           - ion-git
           - java-openjfx
+          - meta-rules-dat
           - veracrypt-updated
 
       fail-fast: false
