--- a/clash-verge/PKGBUILD
+++ b/clash-verge/PKGBUILD
@@ -39,12 +39,12 @@ source=(
 )
 
 sha512sums=(
-    '580a751827cc9fdf35b3dd72df06f2011ac99af8355a58223dfeb19a73f81eaa845b4912271b4d79c9d46e614201b06d7a3afb08ccbb29c8ba8a5242ef38d7fb'
     'SKIP'
     'SKIP'
     'SKIP'
-    '2066dacf2e5e0135e6403cbfb825efcdf08bbcdc781407e6bb1fbb85143817b2b1abef641d20390ff7e5b3e91a509933e9eb17a64f9de7671445ac6d5363a44a'
-    'd1e8992cc0de168930002adccf7953416dfac199ea11886043de58b0df366e4337d5ec548fa3bf8be30575596a5e71dd31960db72f9e067ff131feb756bc96c1'
+    'SKIP'
+    'SKIP'
+    'SKIP'
 )
 options=(!lto)
 
