Update build.yml (#49)
* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* fix build error

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update entrypoint.sh

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

---------

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
           - fcitx5-pinyin-chinese-idiom
           - fcitx5-pinyin-sougou
           - fselect
+          - informant
           - kernel-install-for-dracut
           - kopia
           - kopia-ui-bin
@@ -38,7 +39,7 @@ jobs:
           - watchman
         include:
           - repos: ripgrep-all-git
-            preinstall-pkgs: "poppler"
+            preinstall-pkgs: "pandoc-cli poppler"
 
       fail-fast: false
 
