--- a/create-db-and-upload-action/Dockerfile
+++ b/create-db-and-upload-action/Dockerfile
@@ -1,10 +1,8 @@
-FROM archlinux:latest
+FROM archlinux:base-devel
 
-RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
-RUN date
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && date
 RUN pacman-key --init
-RUN pacman -Syu --noconfirm
-RUN pacman -S base-devel git python rclone pyalpm --noconfirm && sed -i '/E_ROOT/d' /usr/bin/makepkg
+RUN pacman -Syu git python rclone pyalpm --noconfirm && sed -i '/E_ROOT/d' /usr/bin/makepkg
 
 COPY gitconfig /etc/gitconfig
 COPY entrypoint.sh /entrypoint.sh
