--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,6 @@ jobs:
           - fcitx5-pinyin-custom-pinyin-dictionary
           - fcitx5-pinyin-chinese-idiom
           - fcitx5-pinyin-sougou
-          - fselect
           - kernel-install-for-dracut
           - linux-zen-versioned-bin
           - mpris-proxy-service
@@ -28,13 +27,8 @@ jobs:
           - networkd-notify-git
           - paccache-hook
           - playerctld-systemd-unit
-          - rustic-rs
           - swt
-          - watchman
-        include:
-          - repos: ripgrep-all-git
-            preinstall-pkgs: "pandoc-cli poppler"
-
+          - watchman-bin
       fail-fast: false
 
     runs-on: ubuntu-latest
@@ -64,10 +58,10 @@ jobs:
     strategy:
       matrix:
         PKGBUILDs:
+          - fselect
           - ion-git
-          - java-openjfx
+          - rustic-rs
           - veracrypt-updated
-
       fail-fast: false
 
     runs-on: ubuntu-latest
