--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
           - networkd-notify-git
           - pacman-hook-kernel-install
           - playerctld-systemd-unit
+          - proto
           - remove-orphaned-kernels
           - swt
           - wechat-universal-bwrap
