Update build.yml (#66)
* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Create PKGBUILD (#67)

* Create PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Create trim-executables.diff

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Create git-credential-manager.install

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

---------

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

---------

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,7 @@ jobs:
       matrix:
         PKGBUILDs:
           - fselect
+          - git-credential-manager
           - ion-git
           - keepassxc-proxy-rust-git
           - rustic-rs
