--- a/yt-dlp-plugin-chromecookieunlock/PKGBUILD
+++ b/yt-dlp-plugin-chromecookieunlock/PKGBUILD
@@ -7,10 +7,11 @@ pkgrel='1'
 pkgdesc="A yt-dlp plugin to unlock the cookie database of chromium-based browsers."
 arch=('any')
 url="https://github.com/seproDev/${_pkgname}"
-depends=('yt-dlp')
+license=('MIT')
+depends=('python' 'yt-dlp')
 makedepends=('python-build' 'python-installer' 'python-wheel' 'python-hatchling')
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz")
-sha256sums=('ea220725efd4b96ade2d2d8b6f5c823778ea32881b05d1a47ca9b6cac724de15')
+sha512sums=('eceb682a4897f251cb36cbe2a2ee629768daacb2bf6f131173bddadf2620adbd3545e64076e22aaee9902ce6f30eeef48c9c60e99f7dae375bb0bd9ef77b9077')
 
 build() {
 	cd "${_pkgname}-${pkgver}"
