--- a/fselect/PKGBUILD
+++ b/fselect/PKGBUILD
@@ -7,7 +7,9 @@ pkgdesc='Find files with SQL-like queries'
 arch=('i686' 'x86_64')
 url="https://github.com/jhspetersson/${pkgname}"
 license=('MIT OR Apache-2.0')
+depends=('bzip2' 'gcc-libs' 'glibc')
 makedepends=('rust')
+options=('!lto')
 source=("${pkgname}-${pkgver}.tar.gz::https://static.crates.io/crates/${pkgname}/${pkgname}-${pkgver}.crate")
 sha512sums=('2833a617f4182386361ca56bd39179e76f011097c57976e8acd8bd1986651112619a6a5f8121a5718eec29d5a1eff0566debedc4ca493de153d3b2b140ccafb7')
 
@@ -18,7 +20,6 @@ prepare() {
 
 build() {
     cd "${pkgname}-${pkgver}"
-    CFLAGS+=' -ffat-lto-objects'
     cargo build --frozen --release --all-features
 }
 
