--- a/ion-git/PKGBUILD
+++ b/ion-git/PKGBUILD
@@ -11,6 +11,7 @@ license=('MIT')
 makedepends=('git' 'rust')
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
+options=('!lto')
 install="${pkgname}.install"
 source=("git+${url}.git")
 sha512sums=('SKIP')
@@ -28,7 +29,6 @@ prepare() {
 build() {
     cd "${_pkgname}"
     mkdir manual/builtins
-    CFLAGS+=' -ffat-lto-objects'
     cargo build --frozen --release --features man,unicode
     echo -n "# Builtin commands" > manual/src/builtins.md
 	for man in manual/builtins/*; do \
