--- a/yt-dlp-plugin-chromecookieunlock/PKGBUILD
+++ b/yt-dlp-plugin-chromecookieunlock/PKGBUILD
@@ -21,5 +21,5 @@ build() {
 package() {
 	cd "${_pkgname}-${pkgver}"
 	python -m installer --destdir="${pkgdir}" dist/*.whl
- 	install -Dm 0644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+ 	install -Dm 0644 LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}"
 }
