--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,7 @@ jobs:
     strategy:
       matrix:
         PKGBUILDs:
+          - aqua
           - fselect
           - ion-git
           - keepassxc-proxy-rust-git
