--- a/aqua/PKGBUILD
+++ b/aqua/PKGBUILD
@@ -14,7 +14,8 @@ sha512sums=('c76a0026f04e551109b519a493109cd9b23b8f21345b86fb46738d0e05d1b333620
 
 prepare(){
   cd "${pkgname}-${pkgver}"
-  mkdir -p 'build/'
+  mkdir build
+  GOFLAGS="-mod=readonly" go mod vendor -v
 }
 
 build() {
@@ -24,7 +25,7 @@ build() {
   export CGO_CXXFLAGS="${CXXFLAGS}"
   export CGO_LDFLAGS="${LDFLAGS}"
   export GOPATH="${srcdir}"
-  export GOFLAGS="-buildmode=pie -mod=readonly -modcacherw"
+  export GOFLAGS="-buildmode=pie -mod=vendor -modcacherw"
   go build -ldflags "-compressdwarf=false -linkmode external" -o "build/${pkgname}" "./cmd/${pkgname}/"
 }
 
