--- a/yt-dlp-plugin-chromecookieunlock/PKGBUILD
+++ b/yt-dlp-plugin-chromecookieunlock/PKGBUILD
@@ -20,6 +20,6 @@ build() {
 
 package() {
 	cd "${_pkgname}-${pkgver}"
-	python -m installer --destdir="${pkgdir}" dist/*.whl
+	python -m installer --destdir="${pkgdir}" 'dist/*.whl'
  	install -Dm 0644 LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}"
 }
