--- a/fselect/PKGBUILD
+++ b/fselect/PKGBUILD
@@ -8,7 +8,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/jhspetersson/${pkgname}"
 license=('MIT OR Apache-2.0')
 depends=('bzip2' 'gcc-libs' 'glibc')
-makedepends=('rust')
+makedepends=('rust' 'cargo-audit' 'cargo-auditable')
 options=('!lto')
 source=("${pkgname}-${pkgver}.tar.gz::https://static.crates.io/crates/${pkgname}/${pkgname}-${pkgver}.crate")
 sha512sums=('2833a617f4182386361ca56bd39179e76f011097c57976e8acd8bd1986651112619a6a5f8121a5718eec29d5a1eff0566debedc4ca493de153d3b2b140ccafb7')
