upload Arch DB file and sig to GitHub releases

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,3 +67,10 @@ jobs:
           repo_name: vifly
           gpg-privatekey: ${{ secrets.gpg_private_key }}
           local_path: ${{ steps.download.outputs.download-path }}
+
+      - uses: ncipollo/release-action@v1
+        with:
+          allowUpdates: true
+          tag: "packages"
+          artifacts: "./upload_packages/*.sig,./upload_packages/*.files,./upload_packages/*.db,./upload_packages/*.tar.gz"
+          token: ${{ secrets.GITHUB_TOKEN }}
