--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: BUILD
 
 on:
   workflow_dispatch:
-  #  push:
-#  schedule:
-#    - cron:  '1 */8 * * *'
+  push:
+  schedule:
+    - cron:  '1 */8 * * *'
 
 jobs:
   buildAUR:
