--- a/create-db-and-upload-action/action.yml
+++ b/create-db-and-upload-action/action.yml
@@ -1,17 +1,9 @@
 name: 'Generate Arch Repo database and upload'
 inputs:
-  RCLONE_ONEDRIVE_CLIENT_ID:
+  RCLONE_CONFIG_CONTENT:
     required: true
-  RCLONE_ONEDRIVE_CLIENT_SECRET:
-    required: true
-  RCLONE_ONEDRIVE_REGION:
-    required: true
-  RCLONE_ONEDRIVE_TOKEN:
-    required: true
-  RCLONE_ONEDRIVE_DRIVE_ID:
-    required: true
-  RCLONE_ONEDRIVE_DRIVE_TYPE:
-    required: true
+  RCLONE_CONFIG_NAME:
+    required: false
   dest_path:
     required: true
   repo_name:
@@ -25,12 +17,8 @@ runs:
   image: 'Dockerfile'
   
   env:
-    RCLONE_ONEDRIVE_CLIENT_ID: ${{ inputs.RCLONE_ONEDRIVE_CLIENT_ID }}
-    RCLONE_ONEDRIVE_CLIENT_SECRET: ${{ inputs.RCLONE_ONEDRIVE_CLIENT_SECRET }}
-    RCLONE_ONEDRIVE_REGION: ${{ inputs.RCLONE_ONEDRIVE_REGION }}
-    RCLONE_ONEDRIVE_TOKEN: ${{ inputs.RCLONE_ONEDRIVE_TOKEN }}
-    RCLONE_ONEDRIVE_DRIVE_ID: ${{ inputs.RCLONE_ONEDRIVE_DRIVE_ID }}
-    RCLONE_ONEDRIVE_DRIVE_TYPE: ${{ inputs.RCLONE_ONEDRIVE_DRIVE_TYPE }}
+    RCLONE_CONFIG_CONTENT: ${{ inputs.RCLONE_CONFIG_CONTENT }}
+    RCLONE_CONFIG_NAME: ${{inputs.RCLONE_CONFIG_NAME}}
     dest_path: ${{ inputs.dest_path }}
     repo_name: ${{ inputs.repo_name }}
     gpg_key: ${{ inputs.gpg-privatekey }}
